[package]
name = "boss_monster_card_reader-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boss_monster_card_reader-core = { path = "../boss_monster_card_reader-core", features = ["diag_find_text_chunks", "diag_card_finder"] }

clap = { version = "4.4.11", features = ["derive"] }
image = "0.24.7"
imageproc = "0.23.0"
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.51"
